--- a/example/web/index.html
+++ b/example/web/index.html
@@ -40,7 +40,8 @@
   <script src="flutter.js" defer></script>
 
   <script defer type="application/javascript" src="signalR_js/jquery.min.js"></script>
-  <script defer type="application/javascript" src="signalR_js/signalr.js"></script>
+  <script defer type="application/javascript" src="signalR_js/jquery.signalR-2.4.3.min.js"></script>
+  <script defer type="application/javascript" src="signalR_js/socketConnection.js"></script>
 </head>
 <body>
   <script>
@@ -57,7 +58,5 @@
       });
     });
   </script>
-
-  <script defer type="application/javascript" src="signalR_js/socketConnection.js"></script>
 </body>
 </html>
